style(shop.css): update styles for aside, upgradeCard, and upgradeIconWrapper for better layout and aesthetics style(main.css): change paragraph color to var(--Chocolate-1) for improved readability fix(script.js): correct French translation for upgradeCps display text fix(shop.json): update upgrade descriptions for clarity and consistency

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -49,6 +49,7 @@ img {
 }
 
 p {
+    color: var(--Chocolate-1);
     font-size: 12px;
     font-weight: 400;
 }
